--- a/VRChat/25/1342125.html
+++ b/VRChat/25/1342125.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "cfibow3prN+zDvceS6xe6qFe7n1njvRmNH5dpXFhdVg="></script>
+    "xhXssDpuFd7bFkK/Qpe2FR/MBc7ARQq3jFvLbP+23eU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Yuto -ユト-】ver.2.1.1","description":"----------------------------------------\n※ver.2.1よりPhysBone対応となりました※\n\n現在のデータは最新のVRCに対応するため以下の変更を行いました。\n・2022年5月よりシェーダーの同梱を廃止\n・2022年8月よりアニメーションの同梱を廃止\nThe following changes have been made to the current data to comply with the latest VRC\n*Shaders will no longer be included in May 2022.\n*The animation will no longer be included in the package as of August 2022.\n\n\nパッケージのインポートを行う前に以下のシェーダーをDLし、インポートしてください。\nYutoで使用しているシェーダーは以下の通りです。\nPlease DL and import the following shaders before importing the package.\nThe following shaders are used in Yuto.\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n\n「ガラス球向けガラスシェーダー Ver2.1」\nhttps://booth.pm/ja/items/1118922\n\n「Crystal Shader」\nhttps://booth.pm/ja/items/1148311\n\n\nまた、アニメーションファイルもDLしインポートしてください。\nアニメーションファイルは、BOOTHの商品ページから無料でDLできるようになっています。\nPlease also DL and import the animation files.\nThe animation files can be downloaded free of charge from the BOOTH product page.\n\n----------------------------------------\n\n\nU10ちゃんとはちょっと違う量産型アンドロイド。\n私が創作で使用しているキャラクター「ユトちゃん」のデザインにできる限り近づけたものです。\n元々が自分の創作物に使うために作ったものなので、普段販売しているアバターより少しだけ改変等がやりづらくなっています。普段とはシェーダーの使い方やテクスチャの作り方が若干異なります。\n\nボディの規格はmk系に近いですが、同じではありません。\nU10ちゃん用の着せ替えを使う場合、そのままですと上手くいかないかもしれません（確認してません）\n着せ替えしたい場合、UTSのマスク機能などを使ってボディを非表示にする等の処理をお勧めします。\nU10素体版と身長はほぼ同じですが、視点の位置が微妙に違うため注意してください。\n\nリップシンク・フルトラッキング・アイトラッキング対応／約60,000ポリゴン（セットアップ済みの掃除道具出せるものは7万ポリゴン超えてます）／ユニティちゃんトゥーンシェーダー＆MToon使用です。\n\nVRchat用にセットアップ済みのモデル／QUEST用シェーダーに対応した1メッシュモデル／VRMモデル／素体／改変用PSDデータ／改変用blenderデータが同梱されています。\n\nVRChat内の以下のワールドにて試着が可能です。\nhttps://www.vrchat.com/home/launch?worldId=wrld_12ca024e-3ae8-4966-bf2f-c0621f622568 ","url":"https://booth.pm/ja/items/1342125","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"3500"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1342125/f2295aee-6495-4a0d-93e5-b287cfd96d76_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cfibow3prN+zDvceS6xe6qFe7n1njvRmNH5dpXFhdVg="></script>
+    nonce="xhXssDpuFd7bFkK/Qpe2FR/MBc7ARQq3jFvLbP+23eU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -166,7 +166,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【Yuto -ユト-】ver.2.1.1
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -202,6 +202,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -365,9 +367,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
@@ -806,7 +805,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;acosta!マルシェvol.5&quot;,&quot;value&quot;:&quot;acosta-marche5&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
